out/install/x64-Debug/cgenalyzer_simplified_beta.h

// opaque pointer
typedef struct gn_config_private *gn_config;
/**
 * @brief Do DNL analysis and get results
 * @return 0 on success, non-zero otherwise
 */
__api int gn_get_dnla_results(
		char ***rkeys, ///< [rkeys] Output - Result keys
		double **rvalues, ///< [rvalues] Output - Result values
		size_t *results_size, ///< [results_size] Output - Size of results
		const double *dnl, ///< [dnl] Input - DNL input to be analyzed
		gn_config *
				c ///< [c] Input - Configuration structure containing test parameters
);
/**
 * @brief Do INL analysis and get results
 * @return 0 on success, non-zero otherwise
 */
__api int gn_get_inla_results(
		char ***rkeys, ///< [rkeys] Output - Result keys
		double **rvalues, ///< [rvalues] Output - Result values
		size_t *results_size, ///< [results_size] Output - Size of results
		const double *inl, ///< [dnl] Input - INL input to be analyzed
		gn_config *
				c ///< [c] Input - Configuration structure containing test parameters
);
/**
 * @brief Do Fourier analysis and get a single result
 * @return 0 on success, non-zero otherwise
 */
__api int gn_get_fa_single_result(
		double *rvalue, const char *metric_name,
		double *fft_ilv, ///< [fft_ilv] Input - Interleaved Re/Im array pointer
		gn_config *
				c ///< [c] Input - Configuration structure containing test parameters
);
/**
 * @brief Do Fourier analysis and all get results
 * @return 0 on success, non-zero otherwise
 */
__api int gn_get_fa_results(
		char ***rkeys, double **rvalues,
		size_t *results_size, ///< [results_size] size of results
		double *fft_ilv, ///< [fft_ilv] Input - Interleaved Re/Im array pointer
		gn_config *
				c ///< [c] Input - Configuration structure containing test parameters
);