bindings/csharp/Genalyzer/NativeMethods.cs


        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int gn_get_dnla_results(
            out IntPtr rkeys, out IntPtr rvalues,
            out UIntPtr resultsSize,
            [In] double[] dnl,
            ref IntPtr c);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int gn_get_inla_results(
            out IntPtr rkeys, out IntPtr rvalues,
            out UIntPtr resultsSize,
            [In] double[] inl,
            ref IntPtr c);

        [DllImport(LibName,CallingConvention = CallingConvention.Cdecl)]
        internal static extern int gn_get_fa_single_result(
            out double rvalue,
            [MarshalAs(UnmanagedType.LPStr)] string metricName,
            [In] double[] fftIlv,
            ref IntPtr c);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int gn_get_fa_results(
            out IntPtr rkeys, out IntPtr rvalues,
            out UIntPtr resultsSize,
            [In] double[] fftIlv,
            ref IntPtr c);
    }
}
